fixed mobile image featured header and fixed undefined to CITRIS on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2695,6 +2695,15 @@ div#FAQ ol ol li{
 
 	@media screen and (max-width: 936px) {
 
+		/* Header image
+		.image img {
+			display: block;
+			width: 101%;
+			
+			margin-bottom: -7%;
+			margin-top: 10%;
+		} */
+
 		/* Basic */
 
 			html, body {
@@ -2736,6 +2745,16 @@ div#FAQ ol ol li{
 			header p {
 				font-size: 1.5em;
 				line-height: 1.5em;
+			}
+
+		/* Image feature */
+			.image.featured {
+				display: block;
+				width: 101%;
+				margin: 2.5em 0 0.5em 0;
+			}
+			.image img {
+				border-radius: 0px;
 			}
 
 		/* Button */
@@ -2893,6 +2912,7 @@ div#FAQ ol ol li{
 
 				.homepage #main-wrapper {
 					border-top-width: 15px;
+					width: 101%;
 				}
 
 		/* Header */
